--- a/style.css
+++ b/style.css
@@ -1,41 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+
 html, body{
-    height: 100%;
     width: 100%;
+    height: 100vh;
+}
+
+body{
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    background: url(bg.jpg);
+    background-size: cover;
+
 }
 
 h1{
     font-family: roboto;
     font-size: 41px;
     text-decoration: underline;
+    margin-bottom: 22px;
 
 
 }
 
 .container{
-    background: #2d2b2b;
+    padding: 13px;
+    border: 2px solid #000;
     width: 353px;
-    border: 3px solid #dbcef1de;
-    border-radius: 18px;
+    border-radius: 16px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .button{
     width: 66px;
     padding: 20px;
     margin: 0 5px;
-    border: 2px solid black;
-    border-radius: 9px;
+    background: rgba(0, 0, 0, 0.7);
+    font-size: 24px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 25px;
+    color: #fff;
     cursor: pointer;
+    text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.5);
+
 }
 
+button:hover{
+    color: #fff;
+    background: #f67c14;
+}
 .row{
     margin: 8px 0;
 }
 
 .row input{
-    font-size: 24px;
-    margin: 0;
-    padding: 10px 0px;
-    border: 2px solid black;
-    border-radius: 5px;
+    width: 320px;
+    padding: 24px;
+    margin: 10px;
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.4);
+    font-size: 65px;
+    text-align: right;
+    color: #fff;
+    border: solid 2px rgba(0, 0, 0, 0.3);
+    border-radius: 16px;
+    text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.equalBtn{
+    background: #f67c14;
+}
+
+.operator{
+    color: #f67c14;
 }
